fixed for java 12 and netbeans 11.1